[Liang & Piao] refactor park feature of SmartParkingBoy with replacing reduce operation with max operation