@@ -4,18 +4,14 @@ import org.junit.jupiter.api.Test;
 import org.oobootcamp.core.exception.FullParkingLotException;
 import org.oobootcamp.core.exception.InvalidTicketException;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 
 public class SmartParkingBoyTest {
-    // - Given 只有停车场A有空位
-    // - When 停车
-    // - Then 成功停车到A, 返回停车票
     @Test
-    void should_return_ticket_when_parking_given_a_car_and_parking_lotA_has_vacancy() {
+    void should_return_ticket_and_car_in_parking_lotA_when_parking_given_parking_lotA_with_1_vacancy() {
         // Given
         ParkingLot parkingLotA = new ParkingLot(1);
         SmartParkingBoy smartParkingBoy = new SmartParkingBoy(List.of(parkingLotA));
@@ -28,11 +24,8 @@ public class SmartParkingBoyTest {
         assertThat(parkingLotA.pickUp(ticket)).isEqualTo(car);
     }
 
-    //- Given 停车场A/B均有空位
-    //- When 停车
-    //- Then 成功停车到A, 返回停车票
     @Test
-    void should_return_ticket_when_parking_given_a_car_and_parking_lotA_and_parking_lotB_have_vacancy() {
+    void should_return_ticket_and_car_in_parking_lotB_when_parking_given_parking_lotA_with_1_vacancy_and_parking_lotB_with_2_vacancy() {
         // Given
         ParkingLot parkingLotA = new ParkingLot(1);
         ParkingLot parkingLotB = new ParkingLot(2);
@@ -46,12 +39,8 @@ public class SmartParkingBoyTest {
         assertThat(parkingLotB.pickUp(ticket)).isEqualTo(parkedCar);
     }
 
-
-    //- Given 有停车场A/B，A已满，B有空位
-    //- When 停车
-    //- Then 成功停车到B，返回停车票
     @Test
-    void should_return_ticket_when_parking_given_a_car_and_parking_lotA_is_full_and_parking_lotB_has_vacancy() {
+    void should_return_ticket_and_car_in_parking_lotB_when_parking_given_parking_lotA_is_full_and_parking_lotB_with_1_vacancy() {
         // Given
         ParkingLot parkingLotA = new ParkingLot(1);
         ParkingLot parkingLotB = new ParkingLot(1);
@@ -66,15 +55,12 @@ public class SmartParkingBoyTest {
         assertThat(parkingLotB.pickUp(ticket)).isEqualTo(parkedCar);
     }
 
-    //-Given 有停车场A/B, 均已满
-    //-When 停车
-    //-Then 提示“车位已满”
     @Test
-    void should_notice_parking_lot_is_full_when_parking_given_a_car_and_parking_lots_are_all_full() {
+    void should_notice_parking_lot_is_full_when_parking_given_parking_lots_are_all_full() {
         // Given
         ParkingLot parkingLotA = new ParkingLot(1);
         ParkingLot parkingLotB = new ParkingLot(1);
-        SmartParkingBoy smartParkingBoy = new SmartParkingBoy(Arrays.asList(parkingLotA, parkingLotB));
+        SmartParkingBoy smartParkingBoy = new SmartParkingBoy(List.of(parkingLotA, parkingLotB));
         parkingLotA.park(new Car());
         parkingLotB.park(new Car());
 
@@ -84,9 +70,6 @@ public class SmartParkingBoyTest {
         );
     }
 
-    //-Given 有停车场A/B, 用户车停在B
-    //-When 取车
-    //-Then 取车成功
     @Test
     void should_return_car_when_pick_up_given_parking_lotA_and_parking_lotB_and_parked_in_B() {
         // Given
@@ -104,9 +87,6 @@ public class SmartParkingBoyTest {
         assertThat(pickedUpCar).isEqualTo(parkedCar);
     }
 
-    //-Given 有停车场A/B, 用户车停在A
-    //-When 取车
-    //-Then 取车成功
     @Test
     void should_return_car_when_pick_up_given_parking_lotA_and_parking_lotB_and_parked_in_A() {
         // Given
@@ -123,11 +103,8 @@ public class SmartParkingBoyTest {
         assertThat(pickedUpCar).isEqualTo(parkedCar);
     }
 
-    //-Given 其他停车场的车票
-    //-When 取车
-    //-Then 提示“此票无效”
     @Test
-    void should_notice_invalid_ticket_when_pick_up_given_a_ticket_not_belong_to_our_parking_lots() {
+    void should_notice_invalid_ticket_when_pick_up_given_a_ticket_belong_to_other_parking_lot() {
         // Given
         SmartParkingBoy smartParkingBoy = new SmartParkingBoy(List.of(new ParkingLot(1), new ParkingLot(2)));
 
@@ -137,9 +114,6 @@ public class SmartParkingBoyTest {
         );
     }
 
-    //-Given 已取过车的车票
-    //-When 取车
-    //-Then 提示“此票无效”
     @Test
     void should_notice_invalid_ticket_when_pick_up_given_a_ticket_already_used() {
         // Given
